--- a/Rubik.HTML/index.html
+++ b/Rubik.HTML/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>TypeScript HTML App</title>
+    <title>Rubik</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="Scripts/jquery-3.2.1.js"></script>
     <script src="Scripts/jquery-ui.js"></script>
